crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@50.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_long', 'footballyklubber');"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    FuncCall@7..52
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..32
        Sconst@17..32 "'hunspell_long'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..52
        Sconst@34..52 "'footballyklubber'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

