crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_num', 'booking');"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..31
        Sconst@17..31 "'hunspell_num'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..42
        Sconst@33..42 "'booking'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

