crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_num', 'foot');"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..31
        Sconst@17..31 "'hunspell_num'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..39
        Sconst@33..39 "'foot'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

