crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@59.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_num', 'rebookings');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..31
        Sconst@17..31 "'hunspell_num'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..45
        Sconst@33..45 "'rebookings'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

