crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('ispell', 'foots');"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..25
        Sconst@17..25 "'ispell'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..34
        Sconst@27..34 "'foots'"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

