crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_num', 'rebook');"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..31
        Sconst@17..31 "'hunspell_num'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..41
        Sconst@33..41 "'rebook'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

